# specfem3d_geotech

./: .gitignore  CMakeLists.txt  HOWTO_create_a_mesh_for_SPECFEM3D_GEOTECH.txt  Makefile  README  TODO
doc/: CMakeLists.txt  SPECFEM3D_GEOTECH.aux  SPECFEM3D_GEOTECH.bbl  SPECFEM3D_GEOTECH.bib  SPECFEM3D_GEOTECH.blg  SPECFEM3D_GEOTECH.tex  SPECFEM3D_GEOTECH.toc  a1_cubit_example.tex  acknowledgements.tex  authors.tex  chap1_introduction.tex  chap2_getting_started.tex  chap3_input.tex  chap4_output_and_visualization.tex  chap5_utilities.tex  chap6_tutorials.tex  compile_LaTeX_manual.sh  licensing.tex  manual_SPECFEM3D_GEOTECH.bib  manual_SPECFEM3D_GEOTECH.tex
doc/GiDExample/: README_GiDExample
doc/GiDExample/zhen.gid/: zhen.111  zhen.bas  zhen.cnd  zhen.mat
input/: cubit_example.jou  cubit_example.psem  cubit_example.sem  cubit_example_connectivity  cubit_example_coord_x  cubit_example_coord_y  cubit_example_coord_z  cubit_example_material_id  cubit_example_ssbcux  cubit_example_ssbcuy  cubit_example_ssbcuz  elastic.sem  example1.psem  example1_connectivity  example1_coord_x  example1_coord_y  example1_coord_z  example1_material_id  example1_material_list  example1_nowater.psem  example1_nowater.sem  example1_ssbcux  example1_ssbcuy  example1_ssbcuz  example1_trfile  example1_wsfile  example2.psem  example2_coord_y  example2_left_fixed.psem  example2_left_fixed_connectivity  example2_left_fixed_coord_x  example2_left_fixed_coord_z  example2_left_fixed_material_list  example2_left_fixed_ssbcux  example2_left_fixed_ssbcuz  example2_material_id  example2_material_list  example2_ssbcux  example2_ssbcuy  example2_ssbcuz  (+86 more)
src/: CMakeLists.txt  Makefile  apply_bc.f90  apply_traction.f90  compute_bmat.f90  compute_cmat.f90  compute_pressure.f90  elastic.f90  element.f90  excavation.F90  excavation.f90  excavation_library.f90  ghost_library_mpi.f90  gll_library.f90  global.f90  hosts  integration.f90  math_library.f90  math_library_mpi.f90  math_library_serial.f90  mesh_spec.f90  mpi_library.f90  partmesh.f90  partmesh_library.f90  partmesh_scotch.f90  plastic_library.f90  postprocess.f90  preprocess.f90  read_input.f90  scotchf.h  semexcav3d.F90  semgeotech.F90  semgeotech.f90  semslope3d.F90  semslope3d.f90  serial_library.f90  set_precision_mpi.f90  shape_library.f90  slope.F90  solver.f90  (+5 more)
util/: CMakeLists.txt  README_exodus2semgeotech  README_gid2semgeotech  cubit_example.jou  exodus2sem.c  exodus2semgeotech.c  exodusold2semgeotech.c  gid2semgeotech  gid2semgeotech.c  stringmanip.c  validation1.cub  validation1.e  validation1.jou  write_sos.f90
utilities/: README_exodus2sem  README_write_sos  cubit_example.jou  exodus2sem.c  slope3d_new_sos.in  stringmanip.c  validation1.jou  write_sos  write_sos.f90
